# recursivist

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  errors.txt  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements-docs.txt  script.py  setup.cfg  sonar-project.properties  structure.json
.github/workflows/: deploy-docs.yml  lint.yml  python-tests.yml  sonarcloud.yml  tag-release.yml  test.yml  update-sitemap.yml
advanced/development/: index.html
advanced/integration/: index.html
advanced/testing/: index.html
assets/css/: extra.css
assets/js/: extra.js
contributing/: index.html
docs/: contributing.md  index.md  sitemap.md
docs/advanced/: development.md  integration.md  testing.md
docs/assets/css/: extra.css
docs/assets/js/: extra.js
docs/examples/: advanced.md  basic.md  compare.md  export.md  filtering.md
docs/getting-started/: installation.md  quick-start.md
docs/reference/: api-reference.md  cli-reference.md  export-formats.md  pattern-matching.md
docs/user-guide/: basic-usage.md  compare.md  export.md  pattern-filtering.md  shell-completion.md  visualization.md
examples/advanced/: index.html
examples/basic/: index.html
examples/compare/: index.html
examples/export/: index.html
examples/filtering/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
phylo/: core.py  exports.py
phylo_tree/: __init__.py  __main__.py  cli.py  core.py  exports.py
recursivist/: __init__.py  __main__.py  _models.py  cli.py  colors.py  compare.py  config.py  core.py  exports.py  filtering.py  flags.py  git_status.py  github.py  icons.py  jsx_export.py  metrics.py  scanner.py  sorting.py  tree.py
recursivist/exporters/: __init__.py  base.py  html.py  json.py  jsx.py  markdown.py  rst.py  svg.py  txt.py
reference/api-reference/: index.html
reference/cli-reference/: index.html
reference/export-formats/: index.html
reference/pattern-matching/: index.html
scripts/: generate_sitemap.py
search/: search_index.json
sitemap/: index.html
tests/: __init__.py  conftest.py  helpers.py  strategies.py  test_cli.py  test_colors.py  test_compare.py  test_compare_properties.py  test_comparison.py  test_complex_directory.py  test_core.py  test_count_lines.py  test_depth.py  test_depth_limit.py  test_exporters.py  test_exports.py  test_filtering.py  test_flags.py  test_git_status.py  test_github.py  test_integration.py  test_jsx_component.py  test_jsx_export.py  test_metrics.py  test_models.py  test_patterns.py  test_properties.py  test_regex.py  test_scanner.py  test_similarity_sort.py  test_sorting.py  test_tree.py  test_tree_building.py
user-guide/basic-usage/: index.html
user-guide/compare/: index.html
user-guide/export/: index.html
user-guide/pattern-filtering/: index.html
user-guide/shell-completion/: index.html
user-guide/visualization/: index.html
