[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recursivist"
version = "1.4.8"
description = "A command-line tool for visualizing directory structures"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Armaanjeet Singh Sandhu", email = "armaanjeetsandhu430@gmail.com"},
]
keywords = [
    "directory",
    "file-tree",
    "visualization",
    "cli",
    "filesystem",
    "explorer",
    "directory-structure"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "shellingham>=1.5.0",
]

[project.urls]
"Repository" = "https://github.com/ArmaanjeetSandhu/recursivist"
"Documentation" = "https://armaanjeetsandhu.github.io/recursivist"

[project.scripts]
recursivist = "recursivist.cli:main"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "hatchling",
    "hypothesis",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "pymdown-extensions",
    "mkdocs-minify-plugin",
    "mkdocs-glightbox",
]

[tool.hatch.build.targets.wheel]
packages = ["recursivist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=recursivist --cov-report=term-missing"

[tool.ruff]
target-version = "py37"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["recursivist"]

[tool.ruff.lint.per-file-ignores]
"recursivist/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
